--- a/ace-gate/ace-gate-demo/ace-gate-demo-provider/pom.xml
+++ b/ace-gate/ace-gate-demo/ace-gate-demo-provider/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>ace-gate-agent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>3.7.26.ALL</version>
+        </dependency>
     </dependencies>
 
 </project>
