--- a/ace-gate/pom.xml
+++ b/ace-gate/pom.xml
@@ -22,13 +22,21 @@
         <module>ace-gate-common</module>
         <module>ace-gate-agent</module>
         <module>ace-gate-eureka</module>
-        <module>ace-gate-demo</module>
+        <!--<module>ace-gate-demo</module>-->
+        <module>ace-gate-config</module>
+        <module>ace-gate-fegin</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
     </parent>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
+    </properties>
+
     <developers>
         <developer>
             <name>ace</name>
@@ -40,8 +48,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.14</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
     <!--依赖管理，用于管理spring-cloud的依赖，其中Camden.SR3是版本号-->
@@ -50,7 +57,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Dalston.SR1</version>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
