--- a/ace-gate/ace-gate-way/src/main/resources/application.yml
+++ b/ace-gate/ace-gate-way/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
             max-active: 20
     datasource:
         name: test
-        url: jdbc:mysql://localhost:3306/ag_gate_way?serverTimezone=GMT&useUnicode=true&characterEncoding=UTF8
+        url: jdbc:mysql://localhost:3306/ag_gate_way?serverTimezone=GMT&useSSL=false&useUnicode=true&characterEncoding=UTF8
         username: root
         password: 123456
         # 使用druid数据源
