--- a/ace-gate/ace-gate-way/pom.xml
+++ b/ace-gate/ace-gate-way/pom.xml
@@ -179,6 +179,11 @@
             <artifactId>ace-gate-agent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.7</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.alipay.sdk</groupId>-->
             <!--<artifactId>alipay-sdk-java</artifactId>-->
